# Homework1_OS

./: CMakeLists.txt  README.md
mouse_plotter/: CMakeLists.txt
mouse_plotter/include/: mouse_plotter.h
mouse_plotter/src/: main.c  mouse_plotter_functions.c
mouse_saver/: CMakeLists.txt
mouse_saver/include/: mouse_saver.h
mouse_saver/src/: main.c  mouse_saver_functions.c
src/: main.c
